# palmtree

./: .env  .gitignore  main.py  pyproject.toml
auth/: auth.py
migrations/: env.py
migrations/versions/: d2c3d1f2445e_initialisation.py
models/: models.py
src/: database.py  fixtures.py  main.py  test_glampings.py
src/auth/: base_config.py  manager.py  models.py  schemas.py  utils.py
src/glampings/: models.py  router.py  schemas.py
